Add bad item, ground, main menu, ttf library

--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -71,8 +71,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_image-2.6.3\include;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2-2.26.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_image-2.6.3\lib\x64;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2-2.26.5\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_ttf-2.20.2\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_ttf-2.20.2\lib\x64;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_image-2.6.3\lib\x64;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2-2.26.5\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -108,13 +108,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_image-2.6.3\include;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2-2.26.5\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_ttf-2.20.2\include;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_image-2.6.3\include;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2-2.26.5\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2-2.26.5\lib\x64;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_image-2.6.3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_ttf-2.20.2\lib\x64;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2-2.26.5\lib\x64;C:\Users\kasia\OneDrive\Dokumenty\libraries\SDL2_image-2.6.3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
